# befit

./: .gitignore  README.md  package.json  vercel.json
api/api/: api.py  auth.py  track.py
components/: DeleteModal.jsx  DeleteModal.tsx  EditModal.jsx  EditModal.tsx  FAQ.tsx  Navbar.jsx  Navbar.tsx
data/: workouts.json
lib/: sortData.js  sortData.ts
pages/: 404.jsx  404.tsx  _app.jsx  _app.tsx  dashboard.jsx  dashboard.tsx  index.jsx  index.tsx  login.jsx  login.tsx  meditation.jsx  meditation.tsx  progress.jsx  progress.tsx  register.jsx  register.tsx  stats.jsx  stats.tsx  workouts.jsx  workouts.tsx
pages/log/: [lid].jsx  [lid].tsx
pages/search/: [query].jsx  [query].tsx
pages/workout/: [wid].jsx  [wid].tsx
server/: pyproject.toml
server/api/: db.py  models.py  requirements.txt  track.py
styles/: globals.css
types/: cookie.d.ts
