[tool.poetry]
name = "api"
version = "0.1.0"
description = "API for BeFit the free and open source fitness tracker"
authors = ["Py Bash <67195650+pybash1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
deta = "^1.1.0"
fastapi-login = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
